[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Spyridon Pagkalos <spyridon@ender.gr>"]
edition = "2018"

[dependencies]
regex = "1"

[[bin]]
name = "dec01"
path = "src/dec01.rs"

[[bin]]
name = "dec02"
path = "src/dec02.rs"

[[bin]]
name = "dec03"
path = "src/dec03.rs"

[[bin]]
name = "dec04"
path = "src/dec04.rs"

[[bin]]
name = "dec05"
path = "src/dec05.rs"

[[bin]]
name = "dec06"
path = "src/dec06.rs"

[[bin]]
name = "dec08"
path = "src/dec08.rs"
